<resources>
	<string name="app_name">Movie Catalogue</string>
	<string name="action_settings">Settings</string>
	<string name="nav_movie">Movie</string>
	<string name="nav_tv_show">TV Show</string>
	<string name="nav_favorite">Favorite</string>
	<string name="title_activity_detail">Detail Film</string>
	<string name="cover_picture">Cover Picture</string>
	<string name="label_title">Title</string>
	<string name="label_release_date">Release Date</string>
	<string name="title_activity_detail_tv">DetailTvActivity</string>
	<string name="poster">Poster</string>
	<string name="tagline">Tag line</string>
	<string name="release_date">Release Date</string>
	<string name="overview">Overview</string>
	<string name="trailers">Trailers</string>
	<string name="reviews">Reviews</string>
	<string name="first_air_date">First air date</string>
	<string name="last_air_date">Last air date</string>
	<string name="refresh">You don\'t save any data yet, swipe down to refresh!</string>
	<string name="movie_title">Title</string>
	<string name="year">Year</string>
	<string name="description">Description</string>
	<string name="prod">Production Companies</string>
	<string name="status">Status</string>
	<string name="popular">Popularity</string>
	<string name="created">Created By</string>
	<string name="seasons">Seasons</string>
	<string name="search">Search</string>
	<string name="reminder_setting">Reminder</string>
	<string name="movie_hint">Input keyword movies</string>
	<string name="tv_hint">Input keyword tv</string>
	<string name="empty_string">You don\'t have any data</string>
	<string name="appwidget_text">EXAMPLE</string>
	<string name="add_widget">Add widget</string>
	<string name="release_reminder">Release reminder</string>
	<string name="detail_reminder_release">Detail reminder release</string>
	<string name="daily_reminder">Daily reminder</string>
	<string name="detail_daily_reminder">Open app now! you won\'t miss the movie!</string>
	<string name="message_daily">Movie Catalogue missing you!</string>
	<string name="release_movie_message">%s has been release today!</string>
	<string name="active_release_reminder">Release Reminder Activated</string>
	<string name="deactive_release_reminder">Release Reminder Deactivated</string>
	<string name="active_daily_reminder">Daily Remidner Activated</string>
	<string name="deactive_daily_remindedr">Deactive Daily Reminder</string>
	<string name="missing">Oowww!</string>
	<string name="no_release_message">There is no released movie today!</string>

</resources>
