<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.firmanjabar.submission4.MainActivity">

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <group android:menuCategory="container">
        <item android:id="@+id/reminder_setting"
            android:title="@string/reminder_setting"
            app:showAsAction="never" />
        <item
            android:id="@+id/language_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    </group>
</menu>
