<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="10dp"
    cardView:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="132dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="#2d2d2d"
            android:contentDescription="@string/poster"
            android:scaleType="center" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/img_item_photo"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="0dp"
            android:maxLines="2"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="@string/movie_title"
            android:textColor="#2d2d2d"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_title"
            android:layout_alignStart="@+id/card_title"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/year"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_alignStart="@+id/date"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:maxLines="4"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <RatingBar
            android:id="@+id/rate"
            android:progressTint="#fff999"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_alignStart="@+id/desc"
            android:layout_marginStart="0dp"
            android:layout_marginTop="4dp"
            android:padding="2dp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>